feat(github-issues): GH-1 - Takim uyeleri kartlarini olustur
Co-Authored-By: agentic-runner <noreply@agentic-runner>

--- a/index.html
+++ b/index.html
@@ -23,7 +23,22 @@
     <section id="team">
       <h2>Takim Uyeleri</h2>
       <div class="team-grid">
-        <!-- Team members will go here -->
+        <div class="team-card">
+          <div class="avatar-placeholder">
+            <span>A</span>
+          </div>
+          <h3 class="member-name">Ali</h3>
+          <p class="member-role">Frontend Developer</p>
+          <p class="member-description">Kullanici arayuzleri ve modern web teknolojileri konusunda uzman. React ve Vue.js ile calisir.</p>
+        </div>
+        <div class="team-card">
+          <div class="avatar-placeholder">
+            <span>A</span>
+          </div>
+          <h3 class="member-name">Ayse</h3>
+          <p class="member-role">Backend Developer</p>
+          <p class="member-description">Sunucu tarafli uygulamalar ve veritabani yonetimi konusunda deneyimli. Node.js ve Python ile gelistirme yapar.</p>
+        </div>
       </div>
     </section>
 
